Fix spacing and position on 'Vagas' section (Day #5)

--- a/style.css
+++ b/style.css
@@ -127,14 +127,16 @@ header{
     VAGAS 
 */
 
-/* TALENTOS */
+/* Talentos */
+#vagas{
+    padding: 6rem 0;
+}
 
 .talentos-area{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 6rem 0 0;
 }
 .talentos-area span{
     font-size: .875rem;
@@ -164,7 +166,9 @@ header{
     padding: 4rem 0;
     width: 100%;
 }
-/* VAGAS ABERTAS */
+
+/* Vagas Abertas */
+
 .vagas-area{
     display: flex;
     flex-direction: column;
@@ -183,7 +187,7 @@ header{
 .vaga-item{
     border: 1px solid #EAECF0;
     border-radius: 16px;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 1.75rem;
 }
 .vaga-nome{
     font-size: 1.125rem;
@@ -195,7 +199,10 @@ header{
     font-weight: 500;
     color: var(--text-color);
     line-height: 1.5;
+    padding: 2rem 0 0;
 }
-
+.vaga-info-salario{
+    padding: 0 1.5rem;
+}
     
 
